--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "immer": "^9.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "uniqid": "^5.4.0",
     "use-immer": "^0.6.0",
