--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rle-decoder": "^1.0.0",
     "uniqid": "^5.4.0",
     "use-immer": "^0.6.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -41,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.17"
   }
 }
