--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.196",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -18,6 +19,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "immer": "^10.0.2",
+    "lodash": "^4.17.21",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
