Lots of changes * Added menu buttons like V1 * Added all guide info back in * Started work on Patterns menu, adding search and connecting api * Installed React-Query package * Installed clsx package for tailwindcss * Installed downshift a package for dropdowns * Installed react-icons * Added an assets folder for the guide gifs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "utils/*": ["lib/utils/*"],
       "styles/*": ["styles/*"],
       "components/*": ["components/*"],
-      "lib/types/*": ["lib/types/*"]
+      "lib/types/*": ["lib/types/*"],
+      "assets/*": ["assets/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
