--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.7.0",
     "@types/lodash": "^4.14.198",
     "@types/node": "20.4.4",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "clsx": "^2.0.0",
+    "downshift": "^8.2.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.19",
     "immer": "^10.0.2",
@@ -24,6 +27,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
