--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "husky": "^8.0.3",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "tsc-files": "^1.1.4"
+    "prettier-plugin-tailwindcss": "^0.5.4"
   }
 }
